# stivale2-cmake-barebones

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: clang-toolchain.cmake  gcc-toolchain.cmake
src/: limine.cfg  main.c
